@@ -487,3 +487,4 @@
 0.72
 	- do not write "autosave" flag to output XML when "use_autosave" is not set to 1
 	- moved info from mame_regtest.c to README
+	- enabled parse_directory() for Visual Studio 2010 by using dirent API
